# CS250-Project1

./: CMakeLists.txt  README.md  image.cpp  image.hpp  main.cpp
aos/: imageaos.cpp  imageaos.hpp  main-aos.cpp
common/: progargs.cpp  progargs.h  progargs.hpp
image-aos/: main-aos.cpp
image-soa/: imagesoa.cpp  main-soa.cpp
soa/: imagesoa.cpp  imagesoa.hpp  main-soa.cpp
